Build tools 26.0.0 rc1 and Gradle Plugin 2.4.0-alpha3

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ def gitCommitCount = 100 +
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    buildToolsVersion '26.0.0 rc1'
 
     defaultConfig {
         applicationId "io.plaidapp"
