--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:extractNativeLibs="false"
+        android:appCategory="image"
         android:theme="@style/Plaid">
 
         <activity
